kubernetes-basics/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-first-pod
  namespace: my-first-namespace
  labels:
    app: nginx
spec:  
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
